Updated image output in process notebook

--- a/A_processDataFakeReal.ipynb
+++ b/A_processDataFakeReal.ipynb
@@ -31,13 +31,29 @@
         "import pandas as pd\n",
         "import os\n",
         "import re\n",
-        "import altair as alt"
+        "import altair as alt\n",
+        "alt.renderers.enable('html')"
       ],
       "metadata": {
-        "id": "ycWkglbQm_ZU"
+        "id": "ycWkglbQm_ZU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "71c1e5ab-bdd0-4b67-da35-aa9ca98094e7"
       },
       "execution_count": 1,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RendererRegistry.enable('html')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -120,7 +136,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AUilfHpNitgJ",
-        "outputId": "18ec20ee-91df-482d-bdaf-f1328fa4787e"
+        "outputId": "fa8f4513-698e-4ce7-8a3d-72225dc87ffb"
       },
       "execution_count": 4,
       "outputs": [
@@ -147,7 +163,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "9bdf97da-f022-458d-8fda-f3a56403220c"
+        "outputId": "4428c485-0cc5-448b-bd57-c5d5d0f7781e"
       },
       "execution_count": 5,
       "outputs": [
@@ -164,7 +180,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4d24a982-930f-4db3-b75b-3c454612f9eb\">\n",
+              "  <div id=\"df-b01a8bb6-5f87-4518-a023-c930a86c2d19\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -223,7 +239,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4d24a982-930f-4db3-b75b-3c454612f9eb')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b01a8bb6-5f87-4518-a023-c930a86c2d19')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -274,12 +290,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4d24a982-930f-4db3-b75b-3c454612f9eb button.colab-df-convert');\n",
+              "          document.querySelector('#df-b01a8bb6-5f87-4518-a023-c930a86c2d19 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4d24a982-930f-4db3-b75b-3c454612f9eb');\n",
+              "          const element = document.querySelector('#df-b01a8bb6-5f87-4518-a023-c930a86c2d19');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -318,7 +334,7 @@
           "height": 489
         },
         "id": "C8YCl2MeixzP",
-        "outputId": "5aae4fd4-153c-4282-daa0-a39613eb92c6"
+        "outputId": "393d6272-7d84-46cb-c8c9-d51f21f6974f"
       },
       "execution_count": 6,
       "outputs": [
@@ -344,7 +360,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-bf6a4355-9446-4dea-8de6-d105866bd362\">\n",
+              "  <div id=\"df-e29fce9d-9e9b-4b60-b9bd-2f64682d4307\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -457,7 +473,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bf6a4355-9446-4dea-8de6-d105866bd362')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e29fce9d-9e9b-4b60-b9bd-2f64682d4307')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -508,12 +524,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-bf6a4355-9446-4dea-8de6-d105866bd362 button.colab-df-convert');\n",
+              "          document.querySelector('#df-e29fce9d-9e9b-4b60-b9bd-2f64682d4307 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-bf6a4355-9446-4dea-8de6-d105866bd362');\n",
+              "          const element = document.querySelector('#df-e29fce9d-9e9b-4b60-b9bd-2f64682d4307');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -557,7 +573,7 @@
           "height": 478
         },
         "id": "4Tff43zehsnu",
-        "outputId": "1f78b1ea-d9be-437f-f548-9e5bab09318b"
+        "outputId": "9f0d4b06-8ea6-4a8e-f0f5-c34138d30068"
       },
       "execution_count": 7,
       "outputs": [
@@ -566,13 +582,13 @@
           "data": {
             "text/html": [
               "\n",
-              "<div id=\"altair-viz-b2c42601c27b4810bcfe651b2f3df143\"></div>\n",
+              "<div id=\"altair-viz-bc620040cf67490086f21b9fb57c3e57\"></div>\n",
               "<script type=\"text/javascript\">\n",
               "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
               "  (function(spec, embedOpt){\n",
               "    let outputDiv = document.currentScript.previousElementSibling;\n",
-              "    if (outputDiv.id !== \"altair-viz-b2c42601c27b4810bcfe651b2f3df143\") {\n",
-              "      outputDiv = document.getElementById(\"altair-viz-b2c42601c27b4810bcfe651b2f3df143\");\n",
+              "    if (outputDiv.id !== \"altair-viz-bc620040cf67490086f21b9fb57c3e57\") {\n",
+              "      outputDiv = document.getElementById(\"altair-viz-bc620040cf67490086f21b9fb57c3e57\");\n",
               "    }\n",
               "    const paths = {\n",
               "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
