Updates to data processing notebook

--- a/A_processDataFakeReal.ipynb
+++ b/A_processDataFakeReal.ipynb
@@ -31,27 +31,38 @@
         "import pandas as pd\n",
         "import os\n",
         "import re\n",
-        "import altair as alt\n",
-        "alt.renderers.enable('html')"
+        "import altair as alt"
       ],
       "metadata": {
-        "id": "ycWkglbQm_ZU",
+        "id": "ycWkglbQm_ZU"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#!pip install vega\n",
+        "alt.renderers.enable('colab')"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "71c1e5ab-bdd0-4b67-da35-aa9ca98094e7"
+        "id": "GB32UuGBK1v4",
+        "outputId": "02415870-2694-4a61-822f-7daae43a15a7"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "RendererRegistry.enable('html')"
+              "RendererRegistry.enable('colab')"
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ]
     },
@@ -74,7 +85,7 @@
       "metadata": {
         "id": "Jfg_SwMRyuf5"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -123,7 +134,7 @@
       "metadata": {
         "id": "Bsy5Rhvzzp8C"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -136,9 +147,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AUilfHpNitgJ",
-        "outputId": "fa8f4513-698e-4ce7-8a3d-72225dc87ffb"
+        "outputId": "c85f052d-6365-4164-9147-e9bb92f07f8d"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -148,7 +159,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -163,9 +174,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "4428c485-0cc5-448b-bd57-c5d5d0f7781e"
+        "outputId": "4d2c5f3b-a373-4f73-87f4-133046f2a56b"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +191,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b01a8bb6-5f87-4518-a023-c930a86c2d19\">\n",
+              "  <div id=\"df-4f6edd54-189d-4631-98fa-a1e4cbbaf334\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -239,7 +250,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b01a8bb6-5f87-4518-a023-c930a86c2d19')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4f6edd54-189d-4631-98fa-a1e4cbbaf334')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -290,12 +301,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b01a8bb6-5f87-4518-a023-c930a86c2d19 button.colab-df-convert');\n",
+              "          document.querySelector('#df-4f6edd54-189d-4631-98fa-a1e4cbbaf334 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b01a8bb6-5f87-4518-a023-c930a86c2d19');\n",
+              "          const element = document.querySelector('#df-4f6edd54-189d-4631-98fa-a1e4cbbaf334');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -318,7 +329,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -334,9 +345,9 @@
           "height": 489
         },
         "id": "C8YCl2MeixzP",
-        "outputId": "393d6272-7d84-46cb-c8c9-d51f21f6974f"
+        "outputId": "6423cd54-311f-4b6a-f066-6747c71aab3e"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -360,7 +371,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e29fce9d-9e9b-4b60-b9bd-2f64682d4307\">\n",
+              "  <div id=\"df-adc946e0-814b-4f3b-81a9-81ea4c72ca2b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -473,7 +484,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e29fce9d-9e9b-4b60-b9bd-2f64682d4307')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-adc946e0-814b-4f3b-81a9-81ea4c72ca2b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -524,12 +535,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e29fce9d-9e9b-4b60-b9bd-2f64682d4307 button.colab-df-convert');\n",
+              "          document.querySelector('#df-adc946e0-814b-4f3b-81a9-81ea4c72ca2b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e29fce9d-9e9b-4b60-b9bd-2f64682d4307');\n",
+              "          const element = document.querySelector('#df-adc946e0-814b-4f3b-81a9-81ea4c72ca2b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -552,7 +563,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -573,22 +584,22 @@
           "height": 478
         },
         "id": "4Tff43zehsnu",
-        "outputId": "9f0d4b06-8ea6-4a8e-f0f5-c34138d30068"
+        "outputId": "64600d92-4b5e-42cd-ae9a-79967aae4a99"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "<div id=\"altair-viz-bc620040cf67490086f21b9fb57c3e57\"></div>\n",
+              "<div id=\"altair-viz-5e162526cb0143749af32a9dd2bb4598\"></div>\n",
               "<script type=\"text/javascript\">\n",
               "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
               "  (function(spec, embedOpt){\n",
               "    let outputDiv = document.currentScript.previousElementSibling;\n",
-              "    if (outputDiv.id !== \"altair-viz-bc620040cf67490086f21b9fb57c3e57\") {\n",
-              "      outputDiv = document.getElementById(\"altair-viz-bc620040cf67490086f21b9fb57c3e57\");\n",
+              "    if (outputDiv.id !== \"altair-viz-5e162526cb0143749af32a9dd2bb4598\") {\n",
+              "      outputDiv = document.getElementById(\"altair-viz-5e162526cb0143749af32a9dd2bb4598\");\n",
               "    }\n",
               "    const paths = {\n",
               "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -642,7 +653,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -652,7 +663,7 @@
       "metadata": {
         "id": "r98h3w_trf2q"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     }
   ]
