Resolved image issue in processing notebook

--- a/A_processDataFakeReal.ipynb
+++ b/A_processDataFakeReal.ipynb
@@ -42,32 +42,6 @@
     {
       "cell_type": "code",
       "source": [
-        "alt.renderers.enable('mimetype')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Cosj1MXFzYTa",
-        "outputId": "e3c80620-fbaa-4922-ae4d-fd0a953fff43"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "RendererRegistry.enable('mimetype')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 2
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# In some environemnts such as Google Colab, it's\n",
         "# faster to upload a zip file than the raw data.\n",
         "# Uncomment the line below if needed to unzip the data.\n",
@@ -90,15 +64,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "832d5776-031a-456f-96d7-d5c87231e308"
+        "outputId": "c4a4dcea-5b79-49ae-b1ef-8be7df05de2c"
       },
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Directory already there.\n"
+            "Directory created.\n"
           ]
         }
       ]
@@ -149,7 +123,7 @@
       "metadata": {
         "id": "Bsy5Rhvzzp8C"
       },
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -162,9 +136,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AUilfHpNitgJ",
-        "outputId": "7eceae7c-966b-4902-b65b-753fe9300b1c"
+        "outputId": "3e8f9004-9f99-455a-9e07-b32693d40e2d"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -174,7 +148,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 4
         }
       ]
     },
@@ -189,9 +163,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "34a5c114-c3bc-432e-e056-10ff3407618d"
+        "outputId": "5c2a6f04-74d5-4fee-e8e8-5c69d3f2be60"
       },
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -206,7 +180,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-97d7b605-391d-4ebb-9527-658111dd1111\">\n",
+              "  <div id=\"df-83c4ba6e-d457-40ed-af99-fa564b0215ec\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -265,7 +239,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-97d7b605-391d-4ebb-9527-658111dd1111')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-83c4ba6e-d457-40ed-af99-fa564b0215ec')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -316,12 +290,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-97d7b605-391d-4ebb-9527-658111dd1111 button.colab-df-convert');\n",
+              "          document.querySelector('#df-83c4ba6e-d457-40ed-af99-fa564b0215ec button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-97d7b605-391d-4ebb-9527-658111dd1111');\n",
+              "          const element = document.querySelector('#df-83c4ba6e-d457-40ed-af99-fa564b0215ec');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -344,7 +318,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 5
         }
       ]
     },
@@ -360,9 +334,9 @@
           "height": 489
         },
         "id": "C8YCl2MeixzP",
-        "outputId": "1beaf0a4-ccee-4f01-f958-b584c2df8233"
+        "outputId": "1ab87252-5493-4736-da2a-c6b1a9c03be3"
       },
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -386,7 +360,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ce6e85d2-a9ef-47b2-8689-3819cc64ac0f\">\n",
+              "  <div id=\"df-05bf0cb9-96d0-491f-8ea3-22e4c6e326c9\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -499,7 +473,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ce6e85d2-a9ef-47b2-8689-3819cc64ac0f')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-05bf0cb9-96d0-491f-8ea3-22e4c6e326c9')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -550,12 +524,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ce6e85d2-a9ef-47b2-8689-3819cc64ac0f button.colab-df-convert');\n",
+              "          document.querySelector('#df-05bf0cb9-96d0-491f-8ea3-22e4c6e326c9 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ce6e85d2-a9ef-47b2-8689-3819cc64ac0f');\n",
+              "          const element = document.querySelector('#df-05bf0cb9-96d0-491f-8ea3-22e4c6e326c9');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -578,13 +552,16 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 6
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# NOTE: This chart will not show on GitHub.\n",
+        "# See Appendix below for more information.\n",
+        "\n",
         "articlesChart = alt.Chart(chartDF).mark_bar().encode(\n",
         "    x = alt.X('Number of Articles:Q'),\n",
         "    y = alt.Y('Label:N', title=None, axis=alt.Axis(labels=False, tickSize=0)),\n",
@@ -596,138 +573,96 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 109
+          "height": 478
         },
         "id": "4Tff43zehsnu",
-        "outputId": "398fd1b2-5fb5-4a8b-b769-d7ffa2482966"
+        "outputId": "404d124a-8b6c-438f-f337-ef428c4e0f42"
       },
-      "execution_count": 13,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "application/vnd.vegalite.v4+json": {
-              "config": {
-                "view": {
-                  "continuousWidth": 400,
-                  "continuousHeight": 300
-                }
-              },
-              "data": {
-                "name": "data-84f187a9a323c6773f7ea40ffa837eb7"
-              },
-              "mark": "bar",
-              "encoding": {
-                "color": {
-                  "field": "Label",
-                  "type": "nominal"
-                },
-                "row": {
-                  "field": "Domain",
-                  "type": "nominal"
-                },
-                "x": {
-                  "field": "Number of Articles",
-                  "type": "quantitative"
-                },
-                "y": {
-                  "axis": {
-                    "labels": false,
-                    "tickSize": 0
-                  },
-                  "field": "Label",
-                  "title": null,
-                  "type": "nominal"
-                }
-              },
-              "$schema": "https://vega.github.io/schema/vega-lite/v4.17.0.json",
-              "datasets": {
-                "data-84f187a9a323c6773f7ea40ffa837eb7": [
-                  {
-                    "Domain": "biz",
-                    "Label": "fake",
-                    "Number of Articles": 40
-                  },
-                  {
-                    "Domain": "biz",
-                    "Label": "legit",
-                    "Number of Articles": 40
-                  },
-                  {
-                    "Domain": "celebrity",
-                    "Label": "fake",
-                    "Number of Articles": 250
-                  },
-                  {
-                    "Domain": "celebrity",
-                    "Label": "legit",
-                    "Number of Articles": 250
-                  },
-                  {
-                    "Domain": "edu",
-                    "Label": "fake",
-                    "Number of Articles": 40
-                  },
-                  {
-                    "Domain": "edu",
-                    "Label": "legit",
-                    "Number of Articles": 40
-                  },
-                  {
-                    "Domain": "entmt",
-                    "Label": "fake",
-                    "Number of Articles": 40
-                  },
-                  {
-                    "Domain": "entmt",
-                    "Label": "legit",
-                    "Number of Articles": 40
-                  },
-                  {
-                    "Domain": "polit",
-                    "Label": "fake",
-                    "Number of Articles": 40
-                  },
-                  {
-                    "Domain": "polit",
-                    "Label": "legit",
-                    "Number of Articles": 40
-                  },
-                  {
-                    "Domain": "sports",
-                    "Label": "fake",
-                    "Number of Articles": 40
-                  },
-                  {
-                    "Domain": "sports",
-                    "Label": "legit",
-                    "Number of Articles": 40
-                  },
-                  {
-                    "Domain": "tech",
-                    "Label": "fake",
-                    "Number of Articles": 40
-                  },
-                  {
-                    "Domain": "tech",
-                    "Label": "legit",
-                    "Number of Articles": 40
-                  }
-                ]
-              }
-            },
-            "text/plain": [
-              "<VegaLite 4 object>\n",
+            "text/html": [
               "\n",
-              "If you see this message, it means the renderer has not been properly enabled\n",
-              "for the frontend that you are using. For more information, see\n",
-              "https://altair-viz.github.io/user_guide/troubleshooting.html\n"
+              "<div id=\"altair-viz-e6ff7180eac64df29730f34d3d255655\"></div>\n",
+              "<script type=\"text/javascript\">\n",
+              "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
+              "  (function(spec, embedOpt){\n",
+              "    let outputDiv = document.currentScript.previousElementSibling;\n",
+              "    if (outputDiv.id !== \"altair-viz-e6ff7180eac64df29730f34d3d255655\") {\n",
+              "      outputDiv = document.getElementById(\"altair-viz-e6ff7180eac64df29730f34d3d255655\");\n",
+              "    }\n",
+              "    const paths = {\n",
+              "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
+              "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
+              "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@4.17.0?noext\",\n",
+              "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n",
+              "    };\n",
+              "\n",
+              "    function maybeLoadScript(lib, version) {\n",
+              "      var key = `${lib.replace(\"-\", \"\")}_version`;\n",
+              "      return (VEGA_DEBUG[key] == version) ?\n",
+              "        Promise.resolve(paths[lib]) :\n",
+              "        new Promise(function(resolve, reject) {\n",
+              "          var s = document.createElement('script');\n",
+              "          document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
+              "          s.async = true;\n",
+              "          s.onload = () => {\n",
+              "            VEGA_DEBUG[key] = version;\n",
+              "            return resolve(paths[lib]);\n",
+              "          };\n",
+              "          s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
+              "          s.src = paths[lib];\n",
+              "        });\n",
+              "    }\n",
+              "\n",
+              "    function showError(err) {\n",
+              "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
+              "      throw err;\n",
+              "    }\n",
+              "\n",
+              "    function displayChart(vegaEmbed) {\n",
+              "      vegaEmbed(outputDiv, spec, embedOpt)\n",
+              "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
+              "    }\n",
+              "\n",
+              "    if(typeof define === \"function\" && define.amd) {\n",
+              "      requirejs.config({paths});\n",
+              "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
+              "    } else {\n",
+              "      maybeLoadScript(\"vega\", \"5\")\n",
+              "        .then(() => maybeLoadScript(\"vega-lite\", \"4.17.0\"))\n",
+              "        .then(() => maybeLoadScript(\"vega-embed\", \"6\"))\n",
+              "        .catch(showError)\n",
+              "        .then(() => displayChart(vegaEmbed));\n",
+              "    }\n",
+              "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-84f187a9a323c6773f7ea40ffa837eb7\"}, \"mark\": \"bar\", \"encoding\": {\"color\": {\"field\": \"Label\", \"type\": \"nominal\"}, \"row\": {\"field\": \"Domain\", \"type\": \"nominal\"}, \"x\": {\"field\": \"Number of Articles\", \"type\": \"quantitative\"}, \"y\": {\"axis\": {\"labels\": false, \"tickSize\": 0}, \"field\": \"Label\", \"title\": null, \"type\": \"nominal\"}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-84f187a9a323c6773f7ea40ffa837eb7\": [{\"Domain\": \"biz\", \"Label\": \"fake\", \"Number of Articles\": 40}, {\"Domain\": \"biz\", \"Label\": \"legit\", \"Number of Articles\": 40}, {\"Domain\": \"celebrity\", \"Label\": \"fake\", \"Number of Articles\": 250}, {\"Domain\": \"celebrity\", \"Label\": \"legit\", \"Number of Articles\": 250}, {\"Domain\": \"edu\", \"Label\": \"fake\", \"Number of Articles\": 40}, {\"Domain\": \"edu\", \"Label\": \"legit\", \"Number of Articles\": 40}, {\"Domain\": \"entmt\", \"Label\": \"fake\", \"Number of Articles\": 40}, {\"Domain\": \"entmt\", \"Label\": \"legit\", \"Number of Articles\": 40}, {\"Domain\": \"polit\", \"Label\": \"fake\", \"Number of Articles\": 40}, {\"Domain\": \"polit\", \"Label\": \"legit\", \"Number of Articles\": 40}, {\"Domain\": \"sports\", \"Label\": \"fake\", \"Number of Articles\": 40}, {\"Domain\": \"sports\", \"Label\": \"legit\", \"Number of Articles\": 40}, {\"Domain\": \"tech\", \"Label\": \"fake\", \"Number of Articles\": 40}, {\"Domain\": \"tech\", \"Label\": \"legit\", \"Number of Articles\": 40}]}}, {\"mode\": \"vega-lite\"});\n",
+              "</script>"
+            ],
+            "text/plain": [
+              "alt.Chart(...)"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 7
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Appendix: Altair images\n",
+        "\n",
+        "Altair-generated charts don't show on GitHub. The reason is explained here: https://stackoverflow.com/questions/71346406/why-are-my-altair-data-visualizations-not-showing-up-in-github\n",
+        "\n",
+        "So this cell contains a workaround for 'articlesChart' from above, embedding a PNG version of the chart into this Markdown cell. The method is explained here: https://medium.com/analytics-vidhya/embedding-your-image-in-google-colab-markdown-3998d5ac2684\n",
+        "\n",
+        "<img src='https://drive.google.com/uc?id=1qKEkEMUbZz76Me1pFbUk7A68p-B3wUuq'>"
+      ],
+      "metadata": {
+        "id": "ecrKqhIFBqHR"
+      }
     },
     {
       "cell_type": "code",
@@ -735,7 +670,7 @@
       "metadata": {
         "id": "55CumjUn1H0I"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     }
   ]
